CHANGELOG

2015-03-10 1.7.7

  * Fix JS exception when we receive a request error event

2015-03-06 1.7.6

   * Fix : client can be used with Browserify (node polyfill for the browser)
   * Clean-up : Remove unused dependency : Buffers
   * Regression : Not compatible with nodejs prior to 0.8
   * Test : Now tested on more platforms, Node stable, 0.10, 0.8 and IOjs stable

2015-02-08 1.7.5

   * Fixed an issue with processing of request headers. 
     They were computed at query execution and not at the moment where query was initiated.
     This could cause issues when having a change on headers just after a query or processing of several queries in parallel.

2015-02-06 1.7.4

   * Introduce new http errors

2015-02-06 1.7.3

   * Add the httpCode on error

   * Switch search method from GET to POST

2014-11-29  1.7.0
   * Moved the API calls to algolia.net instead of algolia.io domain
   * Fixed a bug (toString potentially called on a null string)

2014-11-25  1.6.4
   * Fixed a bug introduced in 1.6.3 avoiding non-secured API calls to proceed

2014-11-21  1.6.3
   * Added a method to use a secured API Key (useful to use userToken instead of IP for rate limit)

2014-10-23  1.6.2
   * Force UTF-8 encoding while performing JSON requests

2014-10-11  1.6.1
   * Updated the api call method to include the latest client version number

2014-10-07  1.6.0
   * Added public method to add custom http headers

2014-10-06  1.5.14
   * Fixed bug preventing the creation of multiple instances of AlgoliaSearch